Refactorizar gestión de gastos adicionales simplificando tipos